--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,8 +15,9 @@
     "paths": {
       "components/*": ["components/*"],
       "state/*": ["state/*"],
-      "theme": ["theme"]  // Add this line
-    }
+      "theme": ["theme"]
+    },
+    "types": ["jest", "@testing-library/jest-dom", "node"]
   },
   "include": [
     "src/**/*.ts",
